--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -4,8 +4,8 @@
 }
 
 .promo__container {
-  height: 450px;
-  padding: 50px 70px 60px;
+  height: 560px;
+  padding: 0 70px;
   background-image: url("../../images/landing.svg");
   background-position: bottom 60px right 70px;
   background-repeat: no-repeat;
@@ -14,7 +14,7 @@
 .promo__title {
   width: 626px;
   margin: 0;
-  padding: 0;
+  padding: 50px 0 102px;
   color: #fff;
   font-size: 40px;
   line-height: 52px;
@@ -25,7 +25,7 @@
 
 @media screen and (max-width: 1023px) {
   .promo__container {
-    height: 544px;
+    height: 844px;
     padding: 0 30px;
     background-position: bottom 70px center;
     background-size: 680px 230px;
@@ -33,14 +33,14 @@
 
   .promo__title {
     width: 668px;
-    margin: 300px 0 0;
+    padding: 300px 0 0;
     text-align: center;
   }
 }
 
 @media screen and (max-width: 767px) {
   .promo__container {
-    height: 447px;
+    height: 630px;
     max-width: 300px;
     padding: 0 10px;
     background-position: bottom 40px center;
@@ -48,11 +48,8 @@
 
   .promo__title {
     width: 300px;
-    margin: 183px 0 0;
+    padding: 182px 0 60px;
     text-align: center;
-  }
-
-  .promo__title {
     font-size: 31px;
     line-height: 39px;
   }
