--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,12 +6,12 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding: 79px 70px 20px;
+  padding: 0 70px;
 }
 
 .footer__top {
   margin: 0;
-  padding: 0 0 20px;
+  padding: 59px 0 20px;
   text-align: center;
   color: #a0a0a0;
   border-bottom: 1px solid #e8e8e8;
@@ -23,12 +23,14 @@
 .footer__bottom {
   display: flex;
   justify-content: space-between;
+  padding: 0 0 20px;
 }
 
 .footer__copyright {
   margin: 0;
   padding: 0;
   font-size: 13px;
+
   line-height: 16px;
   font-weight: 400;
 }
@@ -42,9 +44,11 @@
 }
 
 .footer__link {
+  display: flex;
   text-decoration: none;
   color: #000;
   font-size: 13px;
+  line-height: 16px;
   font-weight: 400;
 }
 
@@ -59,11 +63,11 @@
   .footer__container {
     gap: 30px;
     max-width: 300px;
-    padding: 79px 10px 20px;
+    padding: 0 14px;
   }
 
   .footer__top {
-    padding: 0 0 21px;
+    padding: 58px 0 21px;
     font-size: 12px;
     line-height: 15px;
   }
@@ -72,7 +76,7 @@
     order: 2;
     font-size: 12px;
     line-height: 15px;
-    color: #A0A0A0;
+    color: #a0a0a0;
   }
 
   .footer__nav {
