--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,24 +1,28 @@
 .header {
-  height: 74px;
+  height: 75px;
+}
+
+.header_navy {
+  background-color: #073042;
 }
 
 .header__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 18px 70px 0;
+  padding: 18px 70px;
 }
 
 @media screen and (max-width: 1023px) {
   .header__container {
     max-width: 708px;
-    padding: 18px 30px 0;
+    padding: 19px 30px 18px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .header__container {
     max-width: 292px;
-    padding: 18px 14px 0;
+    padding: 15px 14px 18px;
   }
 }
