--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,13 +1,17 @@
 .movies__container {
   display: grid;
   grid-template-columns: repeat(auto-fill, 270px);
-  grid-gap: 32px 20px;
+  grid-gap: 31px 20px;
   justify-content: center;
-  padding: 70px 70px 30px;
+  padding: 0 70px 30px;
 }
 
 .movies__button-container {
-  padding: 50px 70px 80px;
+  padding: 50px 70px 100px;
+}
+
+.movies__button-more-container {
+  padding: 50px 70px 109px;
 }
 
 .movies__button {
@@ -25,13 +29,18 @@
     grid-template-columns: repeat(auto-fill, 339px);
     grid-gap: 36px 30px;
     max-width: 708px;
-    padding: 70px 30px 30px;
+    padding: 0 30px;
   }
 
   .movies__button-container {
     max-width: 708px;
-    padding: 50px 30px 80px;
+    padding: 80px 30px 21px;
   }
+
+  .movies__button-more-container {
+    padding: 2px 70px 109px;
+  }
+  
 }
 
 @media screen and (max-width: 767px) {
@@ -39,11 +48,15 @@
     grid-template-columns: repeat(auto-fill, 300px);
     grid-gap: 20px;
     max-width: 300px;
-    padding: 40px 10px 30px;
+    padding: 0 10px;
   }
 
   .movies__button-container {
     max-width: 300px;
-    padding: 50px 10px 80px;
+    padding: 80px 10px 101px;
+  }
+  
+  .movies__button-more-container {
+    height: 10px;
   }
 }
