--- a/src/components/NotFoundError/NotFoundError.css
+++ b/src/components/NotFoundError/NotFoundError.css
@@ -3,28 +3,34 @@
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
-  padding: 246px 70px 0;
+  padding: 0 70px;
 }
 
 .not-found-error__code {
+  display: flex;
+  justify-content: center;
+  width: 100%;
   margin: 0;
-  padding: 0;
+  padding: 246px 0 5px;
   font-size: 140px;
   line-height: 169px;
   font-weight: 400;
 }
 
 .not-found-error__text {
-  margin: 5px 0 0;
-  padding: 0;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 0;
+  padding: 0 0 170px;
   font-size: 16px;
   line-height: 19px;
   font-weight: 400;
 }
 
 .not-found-error__link {
-  margin: 184px 0 0;
-  padding: 0;
+  margin: 0;
+  padding: 14px;
   font-size: 14px;
   line-height: 17px;
   font-weight: 400;
@@ -34,28 +40,34 @@
 
 @media screen and (max-width: 1023px) {
   .not-found-error__container {
-    padding: 408px 50px 0;
+    padding: 0 30px;
+  }
+
+  .not-found-error__code  {
+    padding: 407px 0 5px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .not-found-error__container {
-    padding: 329px 10px 0;
+    padding: 0 14px;
   }
 
   .not-found-error__code {
     font-size: 80px;
     line-height: 97px;
+    padding: 329px 0 11px;
   }
 
   .not-found-error__text {
-    margin: 10px 0 0;
+ 
     font-size: 12px;
     line-height: 15px;
+    padding: 0 0 269px;
   }
   
   .not-found-error__link {
-    margin: 284px 0 0;
+
     font-size: 12px;
     line-height: 15px;
   }
