--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -8,19 +8,23 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 100px 70px;
+  padding: 0 70px;
+}
+
+.techs__title {
+  padding: 101px 0 22px;
 }
 
 .techs__subtitle {
   width: 100%;
-  margin: 90px 0 0;
-  padding: 0;
+  margin: 0;
+  padding: 90px 0 26px;
   text-align: center;
 }
 
 .techs__text {
-  margin: 26px 0 0;
-  padding: 0;
+  margin: 0;
+  padding: 0 0 100px;
   max-width: 460px;
   text-align: center;
   font-size: 14px;
@@ -33,8 +37,8 @@
   display: flex;
   justify-content: center;
   gap: 10px;
-  margin: 100px 0 0;
-  padding: 0;
+  margin: 0;
+  padding: 0 0 100px;
   list-style: none;
 }
 
@@ -45,26 +49,32 @@
   border-radius: 10px;
   background-color: #e8e8e8;
   font-size: 14px;
+  line-height: 17px;
   font-weight: 400;
   letter-spacing: -0.04em;
 }
 
 @media screen and (max-width: 1023px) {
   .techs__container {
-    padding: 90px 50px;
+    padding: 0 50px;
+  }
+
+  .techs__title {
+    padding: 89px 0 22px;
   }
   
   .techs__subtitle {
-    margin: 80px 0 0;
+    padding: 81px 0 21px
   }
 
   .techs__text {
     font-size: 12px;
     line-height: 18px;
+    padding: 0 0 83px;
   }
 
   .techs__list {
-    margin: 83px 0 0;
+    padding: 0 0 89px;
   }
 
   .techs__item {
@@ -76,19 +86,23 @@
 
 @media screen and (max-width: 767px) {
   .techs__container {
-    padding: 70px 18px;
+    padding: 0 18px;
+  }
+
+  .techs__title {
+    padding: 49px 0 26px;
   }
 
   .techs__subtitle {
-    margin: 60px 0 0;
     font-size: 30px;
     line-height: 36px;
+    padding: 62px 0 23px;
   }
 
   .techs__text {
-    margin: 24px 0 0;
     font-size: 11px;
     line-height: 16px;
+    padding: 0 0 50px;
   }
 
   .techs__list {
@@ -96,6 +110,5 @@
     grid-template-columns: repeat(auto-fill, 90px);
     grid-gap: 10px;
     max-width: 284px;
-    margin: 50px 0 0;
   }
 }
