--- a/src/css/auth.css
+++ b/src/css/auth.css
@@ -1,14 +1,18 @@
 .auth__container {
   display: flex;
   flex-direction: column;
-  height: 560px;
+  /* height: 560px; */
   max-width: 396px;
-  padding: 70px;
+  padding: 0 70px;
+}
+
+.auth__header {
+  padding: 70px 0 40px;
 }
 
 .auth__title {
-  margin: 40px 0 0;
-  padding: 0;
+  margin: 0;
+  padding: 0 0 40px;
   font-size: 24px;
   line-height: 29px;
   font-weight: 500;
@@ -17,14 +21,15 @@
 .auth__form {
   display: flex;
   flex-direction: column;
-  margin: 40px 0 0;
-  padding: 0;
+  margin: 0;
+  padding: 0 0 16px;
 }
 
 .auth__input-container {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 8px;
+  padding: 0 0 10px;
 }
 
 .auth__label {
@@ -34,7 +39,7 @@
 }
 
 .auth__input {
-  padding: 15px;
+  padding: 16px 15px 15px 15px;
   border: none;
   outline: none;
   background-color: #f9f9f9;
@@ -49,7 +54,7 @@
 }
 
 .auth__button {
-  margin: 65px 0 0;
+  margin: 0;
   padding: 13px 0 15px;
   font-size: 14px;
   line-height: 17px;
@@ -59,15 +64,12 @@
   border-radius: 3px;
 }
 
-.auth__button_signin {
-  margin: 155px 0 0;
-}
-
 .auth__info {
   display: flex;
   justify-content: center;
   gap: 6px;
-  margin: 16px 0 0;
+  margin: 0;
+  padding: 0 0 16px;
 }
 
 .auth__info-text {
@@ -91,7 +93,7 @@
 
 .auth__error {
   height: 12px;
-  margin: 10px 0 0;
+  margin: 0;
   padding: 0;
   font-size: 10px;
   line-height: 12px;
@@ -99,26 +101,38 @@
   color: #ff3055;
 }
 
+.auth__error_password {
+  padding: 0 0 69px;
+}
+
+.auth__error_signin-password {
+  padding: 0 0 158px;
+}
+
 @media screen and (max-width: 1023px) {
   .auth__container {
     justify-content: center;
-    padding: 232px 50px;
+    padding: 0 30px;
+  }
+
+  .auth__header { 
+    padding: 232px 0 40px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .auth__container {
-    height: 694px;
-    padding: 56px 30px 30px;
+    padding: 0 30px;
   }
 
   .auth__header {
     display: flex;
     justify-content: center;
+    padding: 56px 0 50px;
   }
 
   .auth__title {
-    margin: 50px 0 0;
+    padding: 0 0 80px;
   }
 
   .auth__title {
@@ -126,11 +140,10 @@
   }
 
   .auth__form {
-    margin: 80px 0 0;
+    padding: 0 0 14px;
   }
 
   .auth__button {
-    margin: 153px 0 0;
     padding: 15px 0;
     font-size: 12px;
     line-height: 15px;
@@ -142,7 +155,6 @@
 
   .auth__info {
     gap: 7px;
-    margin: 14px 0 0;
   }
 
   .auth__info-text {
@@ -154,4 +166,12 @@
     font-size: 12px;
     line-height: 15px;
   }
+
+  .auth__error_password {
+    padding: 0 0 156px;
+}
+
+.auth__error_signin-password {
+  padding: 0 0 245px;
+}
 }
