--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -6,15 +6,15 @@
   padding: 0 70px 30px;
 }
 
-.movies__button-container {
+.movies__more-container {
   padding: 50px 70px 100px;
 }
 
-.movies__button-more-container {
-  padding: 50px 70px 109px;
+.movies__more_is-hidden {
+  display: none;
 }
 
-.movies__button {
+.movies__more {
   width: 100%;
   padding: 11px 0 9px;
   border-radius: 6px;
@@ -22,6 +22,19 @@
   font-size: 12px;
   line-height: 16px;
   font-weight: 500;
+}
+
+.movies__error-container {
+  padding: 0 70px;
+}
+
+.movies__error {
+  margin: 0;
+  padding: 70px 0;
+  text-align: center;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
 }
 
 @media screen and (max-width: 1023px) {
@@ -32,15 +45,14 @@
     padding: 0 30px;
   }
 
-  .movies__button-container {
+  .movies__more-container {
     max-width: 708px;
     padding: 80px 30px 21px;
   }
 
-  .movies__button-more-container {
-    padding: 2px 70px 109px;
+  .movies__error-container {
+    padding: 0 30px;
   }
-  
 }
 
 @media screen and (max-width: 767px) {
@@ -51,12 +63,17 @@
     padding: 0 10px;
   }
 
-  .movies__button-container {
+  .movies__more-container {
     max-width: 300px;
     padding: 80px 10px 101px;
   }
-  
-  .movies__button-more-container {
-    height: 10px;
+
+  .movies__error-container {
+    padding: 0 10px;
+  }
+
+  .movies__error {
+    font-size: 12px;
+    line-height: 16px;
   }
 }
