--- a/src/css/auth.css
+++ b/src/css/auth.css
@@ -29,7 +29,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  padding: 0 0 10px;
+  padding: 0;
 }
 
 .auth__label {
@@ -92,7 +92,7 @@
 }
 
 .auth__error {
-  height: 12px;
+  height: 22px;
   margin: 0;
   padding: 0;
   font-size: 10px;
@@ -107,6 +107,12 @@
 
 .auth__error_signin-password {
   padding: 0 0 158px;
+}
+
+.auth__button_disabled {
+  background-color: #f9f9f9;
+  color: #a0a0a0;
+  cursor: default;
 }
 
 @media screen and (max-width: 1023px) {
