--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -11,6 +11,7 @@
 .navigation__list {
   display: flex;
   align-items: baseline;
+  gap: 20px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -47,14 +48,11 @@
 .navigation__link_movies {
   font-size: 14px;
   line-height: 18px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
-.navigation__link_saved-movies {
-  margin: 0 0 0 20px;
-  font-size: 14px;
-  line-height: 18px;
-  font-weight: 400;
+.navigation__link_is-actived {
+  font-weight: 500;
 }
 
 .navigation__link_navy {
